--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.info.FormsActivity"
+        <activity android:name=".ui.profile.ProfileActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.mocked.FormsActivity3"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.mocked.FormsActivity2"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.mocked.FormsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait"
@@ -25,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.info.CaptureDocImageActivity"
+            android:name=".ui.mocked.CaptureDocImageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
     </application>
